--- a/partials/header.handlebars
+++ b/partials/header.handlebars
@@ -12,7 +12,7 @@
         <meta name="og:site_name" content="Breaking" />
         <meta name="og:url" content="http://itsbreaking.com" />
         <meta name="og:description" content="News that matter to you, right in the today tab." />
-        <meta name="og:image" content="http://cdn.getforge.com/itsbreaking.com/1417698046/assets/images/breakingicon.png" />
+        <meta name="og:image" content="{{{config.imgpath}}}/icon-osx.png" />
         <meta name="og:locale" content="en_US" />
         <meta name="og:type" content="website" />
     	
