--- a/assets/css/sections/_header.scss
+++ b/assets/css/sections/_header.scss
@@ -73,10 +73,15 @@
 	pointer-events:none;
 	text-align: center;
 	z-index: 20;
+	@include animation-timing-function(ease);
 
 
-	&.animate {
+	&.animate-in {
 		@include animation(fadeout 0.6s forwards);
-		@include animation-timing-function(ease);
+	}
+
+	&.animate-out {
+		@include animation(fadein 0.6s forwards);
+		
 	}
 }
