--- a/index.handlebars
+++ b/index.handlebars
@@ -3,7 +3,7 @@
 <div class="header-container cont">
 	<div class="video-overlay" id="video-overlay">
 		<div class="video-container" id="video-container">
-			<iframe id="headervid" src="//player.vimeo.com/video/119559804?api=1&color=fee26d&title=0&byline=0&portrait=0" width="1080" height="608" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<iframe id="headervid" src="//player.vimeo.com/video/119559804?api=1&player_id=headervid&color=fee26d&title=0&byline=0&portrait=0" width="1080" height="608" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div>
 	</div>
 	<a href="" class="curtain" id="curtain"></a>
@@ -18,8 +18,8 @@
 	<div class="devices int">
 		<h2>News that matter to you, <br>right in the Today tab.</h2>
 		<h3>The latest stories will always be there when you <br>have time for them, a single gesture away.</h3>
-		<a href="" id="download" class="download">Get it now</span></a>
-		<a href="" id="watch" class="watch">Watch the video</a>
+		<a href="#appstore" id="download" class="download">Get it now</span></a>
+		<a href="#headervid" id="watch" class="watch">Watch the video</a>
 
 	</div>
 	<div class="mac"></div>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="appstore-container cont">
-	<div class="appstore int">
+	<div class="appstore int" id="appstore">
 		<div class="osx section">
 			<a href="">
 				{{{ img "icon-osx.png" true "icon" }}}
