--- a/index.handlebars
+++ b/index.handlebars
@@ -22,27 +22,28 @@
 		<a href="#headervid" id="watch" class="watch">Watch the video</a>
 
 	</div>
-	<div class="mac"></div>
-	<div class="iphone"></div>
+
+	<div class="mac" id="mac_device"></div>
+	<div class="iphone" id="iphone_device"></div>
 </div>
 
 <div class="appstore-container cont">
 	<div class="appstore int" id="appstore">
 		<div class="osx section">
-			<a href="">
+			<a class="icon-link" href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id940103986?ls=1&mt=12">
 				{{{ img "icon-osx.png" true "icon" }}}
 				{{{ img "breaking-for-mac.png" true "text" }}}
 			</a>
 
-			<a href="" class="download-button osx"></a>
+			<a href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id940103986?ls=1&mt=12" class="download-button osx"></a>
 
 		</div>
 		<div class="ios section">
-			<a href="">
+			<a class="icon-link" href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id953959186?ls=1&mt=8">
 				{{{ img "icon-ios.png" true "icon" }}}
 				{{{ img "breaking-for-ios.png" true "text" }}}
 			</a>
-			<a href="" class="download-button ios"></a>
+			<a href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id953959186?ls=1&mt=8" class="download-button ios"></a>
 		</div>
 	</div>
 </div>
@@ -159,7 +160,7 @@
 			<div class="clear"></div>
 		</div>
 		<div class="bsection">
-			<a href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id940103986?ls=1&mt=8" title="Download on the Mac App Store" class="appstore">Download on the Mac App Store</a>
+			<a href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id940103986?ls=1&mt=8" title="Download on the Mac App Store" class="button-appstore osx">Download on the Mac App Store</a>
 		</div>
 	</div>
 </div>
