--- a/index.handlebars
+++ b/index.handlebars
@@ -3,7 +3,7 @@
 <div class="header-container cont">
 	<div class="video-overlay" id="video-overlay">
 		<div class="video-container" id="video-container">
-			<iframe id="headervid" src="//player.vimeo.com/video/119559804?api=1&player_id=headervid&color=fee26d&title=0&byline=0&portrait=0" width="1080" height="608" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<iframe id="headervid" src="//player.vimeo.com/video/119559804?api=1&player_id=headervid&color=fee26d&title=0&byline=0&portrait=0" data-animation-state="in" width="1080" height="608" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div>
 	</div>
 	<a href="" class="curtain" id="curtain"></a>
