--- a/index.handlebars
+++ b/index.handlebars
@@ -10,7 +10,7 @@
 	<div class="header int" id="header" data-animation-state="in">
 		{{{ img "what-if.png" }}}
 		<span>&nbsp;</span>
-		{{{ img "button-play.png" }}}
+		{{{ img "button-play.png" true "play" }}}
 	</div>
 </div>
 
