--- a/assets/css/sections/_devices.scss
+++ b/assets/css/sections/_devices.scss
@@ -100,3 +100,197 @@
 		}
 	}
 }
+
+@include media(max-width 1200px) {
+	@include keyframes(macappear) {
+		from {
+			opacity: 0.4;
+			left: -900px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	left: -350px;
+	    }
+	}
+
+	@include keyframes(iphoneappear) {
+		from {
+			opacity: 0.4;
+			right: -564px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	right: -90px;
+	    }
+	}
+
+	.devices {
+		padding-bottom: 600px;
+	}
+
+	.devices-container {
+		.mac {
+			height: 468px;
+			width: 900px;
+			background-size: 900px 468px;
+		}
+
+		.iphone {
+			height: 518px;
+			width: 564px;
+			background-size: 564px 518px;
+		}
+	}
+}
+
+
+@include media(max-width 1200px) {
+	@include keyframes(macappear) {
+		from {
+			opacity: 0.4;
+			left: -900px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	left: -450px;
+	    }
+	}
+
+	@include keyframes(iphoneappear) {
+		from {
+			opacity: 0.4;
+			right: -564px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	right: -190px;
+	    }
+	}
+}
+
+@include media(max-width 1200px) {
+	@include keyframes(macappear) {
+		from {
+			opacity: 0.4;
+			left: -900px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	left: -450px;
+	    }
+	}
+
+	@include keyframes(iphoneappear) {
+		from {
+			opacity: 0.4;
+			right: -564px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	right: -190px;
+	    }
+	}
+}
+
+@include media(max-width 820px) {
+	@include keyframes(macappear) {
+		from {
+			opacity: 0.4;
+			left: -900px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	left: -550px;
+	    }
+	}
+
+	@include keyframes(iphoneappear) {
+		from {
+			opacity: 0.4;
+			right: -564px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	right: -210px;
+	    }
+	}
+
+	.devices-container {
+		.iphone {
+			bottom: 10px;
+		}
+	}
+}
+
+@include media(max-width 710px) {
+	@include keyframes(macappear) {
+		from {
+			opacity: 0.4;
+			left: -700px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	left: -380px;
+	    }
+	}
+
+	@include keyframes(iphoneappear) {
+		from {
+			opacity: 0.4;
+			right: -434px;
+		}
+	    to { 
+	    	opacity: 1;
+	    	right: -110px;
+	    }
+	}
+
+	.devices {
+		padding: 30px 5px 500px 5px;
+	}
+
+	.devices-container {
+		.mac {
+			height: 364px;
+			width: 700px;
+			background-size: 700px 364px;
+		}
+
+		.iphone {
+			height: 399px;
+			width: 434px;
+			background-size: 434px 399px;
+		}
+	}
+}
+
+@include media(max-width 480px) {
+	.devices {
+		padding: 30px 5px 50px 5px;
+
+		h2 {
+			font-size: 32pt;
+			line-height: 40pt;
+			margin-bottom: 20px;
+
+			br {
+				display: none;
+			}
+		}
+
+		h3 {
+			font-size: 16pt;
+			line-height: 22pt;
+
+			br {
+				display: none;
+			}
+		}
+	}
+
+	.devices-container {
+		.mac, .iphone {
+			display: none;
+		}
+	}
+}
