--- a/assets/css/sections/_download.scss
+++ b/assets/css/sections/_download.scss
@@ -51,27 +51,45 @@
 	}
 }
 
-@include media(max-width 860px) {
+@include media(max-width 780px) {
 	.download-int {
-		h3 {
-			font-size: 16pt;
-			line-height: 22pt;
+		.bsection {
+			a {
+				max-width: 100% !important;
+				height: auto;
+			}
 		}
 	}
 }
 
 @include media(max-width 680px) {
 	.download-int {
-		.asection, .bsection {
-			@include span-columns(12 of 12);
-			@include omega;
+		padding: 20px 5px;
+
+		.section {
+			@include span-columns(6 of 12);
+			line-height: 80px;
+			height: 80px;
 			text-align: center;
-			height: auto;
 		}
 
-		img {
-			float: none;
-			margin-right: 0;
+		.bsection {
+			display: none;
+		}
+	}
+}
+
+@include media(max-width 500px) {
+	.download-int {
+		// padding: 20px 5px;
+
+		.asection, .csection {
+			@include span-columns(12 of 12);
+			@include omega;
+		}
+
+		.asection {
+			margin-bottom: 20px;
 		}
 	}
 }
