--- a/assets/css/sections/_header.scss
+++ b/assets/css/sections/_header.scss
@@ -85,3 +85,13 @@
 		
 	}
 }
+
+@include media(max-width 480px) {
+	.header {
+		padding: 200px 20px;
+
+		.play {
+			margin-top: 30px;
+		}
+	}
+}
