--- a/assets/css/sections/_yosemite.scss
+++ b/assets/css/sections/_yosemite.scss
@@ -31,6 +31,12 @@
 	}
 }
 
+@include media(max-width 1150px) {
+	.yosemite .sidebar {
+		display: none;
+	}
+}
+
 @include media(max-width 420px) {
 	.yosemite-cont {
 		height: auto;
