--- a/assets/css/sections/_features.scss
+++ b/assets/css/sections/_features.scss
@@ -26,12 +26,12 @@
 
 		h3 {
 			margin: 0;
-			font-weight: 200;
+			// font-weight: 200;
 		}
 
 		p {
 			color: #ffea96;
-			font-weight: 200;
+			// font-weight: 200;
 			margin: 0;
 			margin-top: 0px;
 			line-height: 18pt;
