--- a/index.handlebars
+++ b/index.handlebars
@@ -19,6 +19,7 @@
 		<h2>News that matter to you, <br>right in the Today tab.</h2>
 		<h3>The latest stories will always be there when you <br>have time for them, a single gesture away.</h3>
 		<a href="#appstore" id="download" class="download">Get it now</span></a>
+		<br>
 		<a href="#headervid" id="watch" class="watch">Watch the video</a>
 
 	</div>
@@ -30,20 +31,20 @@
 <div class="appstore-container cont">
 	<div class="appstore int" id="appstore">
 		<div class="osx section">
-			<a class="icon-link" href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id940103986?ls=1&mt=12">
+			<a class="icon-link" href="{{{ osxlink }}}">
 				{{{ img "icon-osx.png" true "icon" }}}
 				{{{ img "breaking-for-mac.png" true "text" }}}
 			</a>
 
-			<a href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id940103986?ls=1&mt=12" class="download-button osx"></a>
+			<a href="{{{ osxlink }}}" class="download-button osx"></a>
 
 		</div>
 		<div class="ios section">
-			<a class="icon-link" href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id953959186?ls=1&mt=8">
+			<a class="icon-link" href="{{{ ioslink }}}">
 				{{{ img "icon-ios.png" true "icon" }}}
 				{{{ img "breaking-for-ios.png" true "text" }}}
 			</a>
-			<a href="https://itunes.apple.com/us/app/breaking-news-in-your-today/id953959186?ls=1&mt=8" class="download-button ios"></a>
+			<a href="{{{ ioslink }}}" class="download-button ios"></a>
 		</div>
 	</div>
 </div>
@@ -89,7 +90,7 @@
 		<div class="clear"></div>
 	</div>
 
-	<div class="sidebar" id="sidebar">
+	<div class="sidebar" id="sidebar" data-ready="false">
 		<div class="tabs">
 			<div class="tab selected">
 				<span>Today</span>
