--- a/index.handlebars
+++ b/index.handlebars
@@ -3,7 +3,7 @@
 <div class="header-container cont">
 	<div class="video-overlay" id="video-overlay" data-animation-state="out">
 		<div class="video-container" id="video-container">
-			<iframe id="headervid" src="//player.vimeo.com/video/119559804?api=1&player_id=headervid&color=fee26d&title=0&byline=0&portrait=0" width="1080" height="608" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen data-animation-state="out"></iframe>
+			<iframe id="headervid" src="//player.vimeo.com/video/120421420?api=1&player_id=headervid&color=fee26d&title=0&byline=0&portrait=0" width="1080" height="608" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen data-animation-state="out"></iframe>
 		</div>
 	</div>
 	<a href="" class="curtain" id="curtain"></a>
@@ -16,7 +16,7 @@
 
 <div class="devices-container cont">
 	<div class="devices int">
-		<h2>News that matter to you, <br>right in the Today tab.</h2>
+		<h2>News that matters to you, <br>right in the Today tab.</h2>
 		<h3>The latest stories will always be there when you <br>have time for them, a single gesture away.</h3>
 		<a href="#appstore" id="download" class="download">Get it now</span></a>
 		<br>
