--- a/index.handlebars
+++ b/index.handlebars
@@ -105,8 +105,7 @@
 		<div class="date" id="date">
 			<div class="weekday" id="date-weekday">Sunday</div>
 			<div class="day">
-				<span id="date-dayofmonth">24</span>
-				<sup class="tense" id="date-tense">th</sup> <span class="month" id="date-month">December</span>
+				<span id="date-dayofmonth">24</span><sup class="tense" id="date-tense">th</sup> <span class="month" id="date-month">December</span>
 			</div>
 		</div>
 
