--- a/index.handlebars
+++ b/index.handlebars
@@ -16,7 +16,7 @@
 
 <div class="devices-container cont">
 	<div class="devices int">
-		<h2>News that matters to you, <br>right in the Today tab.</h2>
+		<h2>News that matters to you,<br> right in the Today view.</h2>
 		<h3>The latest stories will always be there when you <br>have time for them, a single gesture away.</h3>
 		<a href="#appstore" id="download" class="download">Get it now</span></a>
 		<br>
@@ -51,8 +51,8 @@
 
 <div class="yosemite-cont cont">
 	<div class="yosemite-int int">
-		<h3>Breaking let’s you add <br>news feeds to your Today tab</h3>
-		<p>Add local news, your favorite blogs or anything else that comes with a feed as a Today tab widget in OS X Yosemite &amp; iOS 8. Breaking is an easy, uncluttered way of staying on top of what’s new in your world.</p>
+		<h3>Breaking let’s you add <br>news feeds to your Today view</h3>
+		<p>Add local news, your favorite blogs or anything else that comes with a feed as a Today view widget in OS X Yosemite &amp; iOS 8. Breaking is an easy, uncluttered way of staying on top of what’s new in your world.</p>
 		{{{ img "interface-osx.png" true "interface" }}}
 	</div>
 
@@ -180,9 +180,9 @@
 	<div class="footer-int int">
 		<p>Made by Robocat <a href="http://robo.cat/" class="robocat">{{{ img "robocat-logo.png" }}}</a> in Copenhagen</p>
 		<div class="actions">
-			<a href="http://twitter.com/robocat" title="Visit the Robocat website" class="button robocat">About us</a>
-			<a href="http://twitter.com/robocat" title="Robocat on Twitter" class="button twitter">Twitter</a>
-			<a href="http://facebook.com/robocat" title="Robocat on Facebook" class="button facebook">Facebook</a>
+			<a href="//robo.cat" title="Visit the Robocat website" class="button robocat">About us</a>
+			<a href="//twitter.com/robocat" title="Robocat on Twitter" class="button twitter">Twitter</a>
+			<a href="//facebook.com/robocatapps" title="Robocat on Facebook" class="button facebook">Facebook</a>
 			<a href="mailto:hello@robo.cat" title="Say Hello with an Email" class="button email">Email</a>
 			<a href="/downloads/presspackage.zip" title="Download the Press Package" class="button press">Press Package</a>
 		</div>
