--- a/assets/css/sections/_header.scss
+++ b/assets/css/sections/_header.scss
@@ -3,6 +3,7 @@
 	background-size: cover;
 	background-position: 50% 50%;
 	position: relative;
+	@include transition(all 0.2s ease-in-out);
 
 	$hover-image: image-url("header-background-hover.jpg");
 
